[gd_scene load_steps=4 format=3 uid="uid://bxg1nw5rhm55a"]

[ext_resource type="Script" path="res://visualize.gd" id="1_hf6u4"]
[ext_resource type="Theme" uid="uid://c13vwefeoxg57" path="res://theme.tres" id="2_84yn3"]
[ext_resource type="AudioStream" uid="uid://cjduxivri77rn" path="res://20240804_Nightcore - In My Mind (Lyrics) ｜ Dynoro, Gigi D’Agostino, Nito-Onna, LØST SIGNAL, Harddope.ogg" id="3_vbd15"]

[node name="root" type="Node2D"]
script = ExtResource("1_hf6u4")

[node name="camera" type="Camera2D" parent="."]

[node name="subbass" type="ProgressBar" parent="."]
offset_left = -399.0
offset_top = 95.0
offset_right = -349.0
offset_bottom = 295.0
theme = ExtResource("2_84yn3")
fill_mode = 3
show_percentage = false

[node name="bass1" type="ProgressBar" parent="."]
offset_left = -303.0
offset_top = 95.0
offset_right = -253.0
offset_bottom = 295.0
theme = ExtResource("2_84yn3")
fill_mode = 3
show_percentage = false

[node name="bass2" type="ProgressBar" parent="."]
offset_left = -202.0
offset_top = 95.0
offset_right = -152.0
offset_bottom = 295.0
theme = ExtResource("2_84yn3")
fill_mode = 3
show_percentage = false

[node name="mid1" type="ProgressBar" parent="."]
offset_left = -98.0
offset_top = 95.0
offset_right = -48.0
offset_bottom = 295.0
theme = ExtResource("2_84yn3")
fill_mode = 3
show_percentage = false

[node name="mid2" type="ProgressBar" parent="."]
offset_left = 20.0
offset_top = 95.0
offset_right = 70.0
offset_bottom = 295.0
theme = ExtResource("2_84yn3")
fill_mode = 3
show_percentage = false

[node name="mid3" type="ProgressBar" parent="."]
offset_left = 125.0
offset_top = 95.0
offset_right = 175.0
offset_bottom = 295.0
theme = ExtResource("2_84yn3")
fill_mode = 3
show_percentage = false

[node name="mid4" type="ProgressBar" parent="."]
offset_left = 235.0
offset_top = 95.0
offset_right = 285.0
offset_bottom = 295.0
theme = ExtResource("2_84yn3")
fill_mode = 3
show_percentage = false

[node name="high1" type="ProgressBar" parent="."]
offset_left = 336.0
offset_top = 95.0
offset_right = 386.0
offset_bottom = 295.0
theme = ExtResource("2_84yn3")
fill_mode = 3
show_percentage = false

[node name="high2" type="ProgressBar" parent="."]
offset_left = 426.0
offset_top = 95.0
offset_right = 476.0
offset_bottom = 295.0
theme = ExtResource("2_84yn3")
fill_mode = 3
show_percentage = false

[node name="player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_vbd15")
